# globeco-order-generation-service

./: .bandit  .gitignore  .pre-commit-config copy.yaml  ARCHITECTURE.md  Dockerfile  Dockerfile.mock-services  METRICS_FIX_SUMMARY.md  PROMETHEUS_MULTIPROCESS_FIX.md  README.md  build.sh  cursor-logs-history-001.md  cursor-logs.md  debug_config.py  docker-compose.monitoring.yml  docker-compose.yml  env.example  gunicorn_config.py  hello.py  kbuild.sh  mdc:cursor-logs.md  pyproject.toml  pytest.ini  test_beanie_fix.py  test_validation.py
.cursor/rules/: general-rules.mdc  markdown-rules.mdc  python-rules.mdc
.github/workflows/: ci.yml  deploy.yml
.kiro/specs/database-initialization-fix/: requirements.md
.kiro/specs/http-metrics-implementation/: design.md  requirements.md  tasks.md
ai-generated-documentation/: ORDER_GENERATION_SERVICE_INTEGRATION_GUIDE.md  OTEL_CONFIGURATION_GUIDE.md  architecture-decision-records.md  architecture.md  execution-plan copy.md  execution-plan.md  requirements.md
deployments/: CI-CD-README.md  ingress.yaml  kustomization.yaml  mongodb.yaml  secrets.yaml
deployments/patches/: production-resources.yaml
deprecated/deployments/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  service.yaml
deprecated/deployments/patches/: production-resources.yaml
deprecated/scripts/: deploy.sh  start-production.sh
docs/: PROMETHEUS_DIRECTORY_PERMISSIONS.md  PROMETHEUS_MULTIPROCESS_TROUBLESHOOTING.md  WORKER_CONFIGURATION_GUIDE.md  WORKER_RESTART_VISUALIZATION.md  beanie-multiworker-fix.md  database-initialization-fix.md  http-metrics-implementation-guide-python.md
docs/api/: delete-model-endpoint.md
k8s/: deploy.sh  deployment.yaml  mongodb-deployment.yaml  redis.yaml
k8s_aws/: deployment.yaml  globeco-portfolio-service-mongodb-persistent-volume-claim.yaml  k8s.lst  mongodb-deployment.yaml  mongodb-persistent-volume-claim.yaml  mongodb-persistent-volume.yaml  redis-persistent-volume-claim.yaml  redis-persistent-volume.yaml  redis.yaml
monitoring/prometheus/: alert_rules.yml  prometheus.yml
original-documentation/: business-requirements.md  non-functional-requirements.mdc  order-service-openapi.yaml  portfolio-accounting-service-openapi.yaml  portfolio-service-openapi.yaml  pricing-service-openapi.yaml  sample-execution-plan.md  sample-requirements.md  security-service-openapi.yaml  supplemental-requirement-1.md  supplemental-requirement-2.md  supplemental-requirement-3.md  supplemental-requirement-4.md
scripts/: build-docker.sh  deploy-k8s.sh  mongo-init.js  security-scan.sh  start-production.sh  test-prometheus-multiproc.py  test-prometheus-multiprocess.sh
scripts/mock-services/: start_all.py
src/: config.py  main.py
src/api/: dependencies.py
src/api/routers/: __init__.py  health.py  models.py  rebalance.py  rebalances.py
src/core/: exceptions.py  mappers.py  monitoring.py  security.py  utils.py
src/core/services/: model_service.py  rebalance_service.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  model.py  position.py  rebalance.py
src/domain/repositories/: __init__.py  base_repository.py  model_repository.py  rebalance_repository.py
src/domain/services/: __init__.py  drift_calculator.py  optimization_engine.py  validation_service.py
src/domain/services/implementations/: __init__.py  portfolio_drift_calculator.py  portfolio_validation_service.py
src/domain/value_objects/: __init__.py  drift_bounds.py  target_percentage.py
src/infrastructure/database/: __init__.py  database.py
src/infrastructure/database/repositories/: __init__.py  model_repository.py  rebalance_repository.py
src/infrastructure/optimization/: __init__.py  cvxpy_solver.py
src/models/: __init__.py  model.py  rebalance.py
src/schemas/: models.py  rebalance.py  transactions.py
src/tests/: conftest.py  test_infrastructure.py
src/tests/integration/: test_database_integration.py  test_end_to_end_workflow.py  test_fastapi_app.py  test_load_testing_and_benchmarks.py  test_mathematical_validation_edge_cases.py  test_middleware.py
src/tests/performance/: test_api_performance.py
src/tests/unit/: test_http_metrics.py
src/tests/unit/api/: test_health.py  test_health_router.py  test_model_router.py  test_portfolio_endpoint.py  test_position_endpoint.py  test_rebalance_router.py
src/tests/unit/core/: test_mappers.py  test_model_service_integration.py  test_rebalance_service_business_flows.py
src/tests/unit/domain/: test_domain_services.py  test_drift_bounds.py  test_investment_model.py  test_model_repository.py  test_portfolio_drift_calculator.py  test_portfolio_validation_service.py  test_position.py  test_target_percentage.py
src/tests/unit/domain/entities/: test_rebalance.py
src/tests/unit/infrastructure/: test_cvxpy_solver.py  test_external_clients.py
src/tests/unit/infrastructure/database/repositories/: test_rebalance_repository.py
src/tests/unit/models/: test_rebalance_models.py
src/tests/unit/schemas/: test_model_schemas.py  test_rebalance_schemas.py
src/tests/utils/: __init__.py  assertions.py  generators.py  helpers.py
